# fishmol

./: .buildinfo  .gitignore  H_bond.html  MSD_diff_coeff.html  README.md  VRD.html  diff_aniso.html  genindex.html  intro.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js  trajectory_IO.html
.github/workflows/: docs.yml  publish.yml
_sources/: H_bond.ipynb  MSD_diff_coeff.ipynb  intro.md  trajectory_IO.ipynb
docs/: H_bond.ipynb  MSD_diff_coeff.ipynb  VRD.ipynb  _config.yml  diff_aniso.ipynb  modules.ipynb  trajectory_IO.ipynb
fishmol/: __main__.py  atoms.py  cli_utils.py  dimer.py  funcs.py  io.py  io.py_change_log  sel_tools.py  style.py  trj.py  utils.py
test_lammps/: Ti0.1Zr0.9Mn0.9V0.1Fe0.5Ni0.5.data  Ti0.1Zr0.9Mn0.9V0.1Fe0.5Ni0.5.symbols  Ti0.1Zr0.9Mn0.9V0.1Fe0.5Ni0.5_npt.lammpstrj
