[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishmol"
version = "0.1.0a1"
description = "Pure-Python post-processing package for molecular dynamics trajectories"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Lei Lei", email = "Lei.Lei2@nottingham.ac.uk"}
]
keywords = [
    "molecular dynamics", "trajectory analysis", "radial distribution function",
    "mean square displacement", "diffusion", "hydrogen bond", "computational chemistry"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "recordclass>=0.17.2",
    "iteration_utilities>=0.11.0",
    "colour>=0.1.5",
]

[project.optional-dependencies]
vis = ["ase>=3.22.1", "jupyter"]
dev = [
    "build",
    "twine",
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/Lei-Lei-alpha/FishMol"
Documentation = "https://lei-lei-alpha.github.io/fishmol"
"Bug Tracker" = "https://github.com/Lei-Lei-alpha/FishMol/issues"
Source = "https://github.com/Lei-Lei-alpha/FishMol"

[project.scripts]
fishmol = "fishmol.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fishmol*"]
